# gukab

./: .gitignore  CHANGELOG.md  CLAUDE.md  Cargo.toml  README.md  dist-workspace.toml
.cargo/: config.toml
.github/workflows/: windows-check.yml
docs/: demo.tape
docs/demo-home/.config/gukab/: automations.toml  hosts.toml
docs/demo-home/.config/gukab/notes/: core switch VLANs.md  maintenance window.md  rack layout.md
examples/: automations.toml  hosts.toml
src/: fuzzy.rs  macos_trust.rs  main.rs
src/config/: mod.rs
src/notes/: mod.rs
src/serial/: client.rs  mod.rs
src/session/: mod.rs
src/ssh/: baud_picker.rs  client.rs  highlight.rs  macro_picker.rs  mod.rs  session_log.rs
src/tui/: app.rs  mod.rs  ui.rs
