[package]
name = "gukab"
version = "1.1.0"
edition = "2024"
description = "A terminal-only (TUI) SSH connection manager for network devices."
license = "GPL-3.0-or-later"
repository = "https://github.com/GokhanTurk/gukab"
homepage = "https://github.com/GokhanTurk/gukab"
readme = "README.md"
keywords = ["ssh", "tui", "terminal", "network", "cisco"]
categories = ["command-line-utilities", "network-programming"]

[dependencies]
ratatui = "0.30.1"
crossterm = "0.29.0"
russh = { version = "0.61.2", default-features = false, features = ["ring", "flate2", "rsa", "des", "dsa"] }
ssh-key = "=0.7.0-rc.10"
nucleo = "0.5.0"
serde = { version = "1", features = ["derive"] }
toml = "0.8"
keyring = "2"
tokio = { version = "1", features = ["full"] }
thiserror = "2"
regex = "1"
chrono = "0.4"

# Optimize dependencies even in dev builds so `cargo run` isn't crippled by
# unoptimized crypto (russh + ring). Our own crate stays at debug opt-level for
# fast incremental builds and debuggability; only third-party deps are optimized.
[profile.dev.package."*"]
opt-level = 3

# The profile that 'dist' will build with
[profile.dist]
inherits = "release"
lto = "thin"
